fixes after reviews
